log
Wed Oct 14 19:12:30 UTC 2020: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:56:9: error: variable ‘num’ set but not used [-Werror=unused-but-set-variable]
     int num;
         ^~~
cc1: all warnings being treated as errors
Compilation failed
Wed Oct 14 19:12:48 UTC 2020: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  0|0
0cf920f
Wed Oct 14 19:14:00 UTC 2020: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
7660f54
Wed Oct 14 19:15:15 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
14dd121
Wed Oct 14 19:39:42 UTC 2020: 
 sudoku.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
01e055c
Wed Oct 14 19:39:55 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
01c7148
Wed Oct 14 19:40:18 UTC 2020: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
ae5aa18
Wed Oct 14 19:54:46 UTC 2020: 
 sudoku.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
 tests:  0|5
total_score: 0/70
1c2397e
